--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,3 +14,42 @@ html {
 body {
     font-family: $font-Rubik !important;
 }
+
+/* Hero Section */
+.bg-img-hero {
+    position: relative;
+    background: url("../img/hero-img.jpg") no-repeat center;
+    background-size: cover;
+    min-height: 100vh;
+    z-index: 1;
+}
+
+.bg-img-hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.65);
+    z-index: -1;
+}
+
+
+.hero-section-custom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 15%;
+}
+
+.hero-header{
+    font-size: 5rem;
+}
+
+.hero-paragraph{
+    font-size: 1.5rem;
+}
+
+@import 'mobile';
