--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ body {
 }
 
 
-.hero-section-custom{
+.hero-section-custom {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,12 +44,39 @@ body {
     padding-top: 15%;
 }
 
-.hero-header{
+.hero-header {
     font-size: 5rem;
 }
 
-.hero-paragraph{
+.hero-paragraph {
     font-size: 1.5rem;
 }
+
+/* About Section */
+.about-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    
+    .about-header{
+        font-weight: 600;
+        font-size: 2.1rem;
+    }
+    .about-under-header{
+        font-weight: 400;
+        font-size: 1.9rem;
+    }
+    
+    .about-paragraph{
+        font-size: 1rem;
+    }
+    
+    .about-image img{
+        max-width: 100%
+    }
+}
+
+
 
 @import 'mobile';
