added overview section

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -26,4 +26,17 @@
             font-size: 0.9rem;
         }
     }
+
+    /* Overview Section */
+    .overview-section{
+        .overview-header{
+            font-size: 1.3rem;
+        }
+        .overview-under-header{
+            font-size: 1.1rem;
+        }
+        .overview-paragraph{
+            font-size: 0.9rem;
+        }
+    }
 }
