--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,5 +106,22 @@ body {
     }
 }
 
+/* Gallery Section */
+.gallery-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 200px 0;
+    .gallery-header{
+        font-size: 2.5rem;
+        font-style: italic;
+        font-weight: bold;
+        padding-bottom: 30px;
+    }
+    .gallery-paragraph{
+        font-style: italic;
+    }
+}
+
 
 @import 'mobile';
