added small fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,6 +127,9 @@ body {
     .gallery-paragraph {
         font-style: italic;
     }
+    .gallery-margin-img{
+        margin: 10px 0;
+    }
 }
 
 /* Driving Section */
